# Agentic-Travel-Planner

./: docker-compose.yml
agentic_travel_planner/: .gitignore  Dockerfile  README.md  pyproject.toml  report.md
agentic_travel_planner/knowledge/: user_preference.txt
agentic_travel_planner/output/: FinalItinerary.md  activitiy_planning.json  flight_research.json  hotel_research.json  initialplan.json
agentic_travel_planner/src/agentic_travel_planner/: app.py  crew.py  main.py  test_api.py  worker.py
agentic_travel_planner/src/agentic_travel_planner/config/: agents.yaml  tasks.yaml
agentic_travel_planner/src/agentic_travel_planner/tools/: __init__.py  activity_search_tool.py  flight_search_tool.py  hotel_search_tool.py
frontend/: App.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
frontend/components/: BookingDetails.tsx  BudgetSidebar.tsx  ChatWidget.tsx  Dashboard.tsx  Footer.tsx  Hero.tsx  Home.tsx  Insights.tsx  ItineraryList.tsx  Navbar.tsx  PlannerForm.tsx  TripPulse.tsx
frontend/context/: TripContext.tsx
frontend/services/: api.ts  gemini.ts
frontend/utils/: format.ts
