[project]
name = "agentic_travel_planner"
version = "0.1.0"
description = "agentic-travel-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "celery>=5.6.0",
    "crewai[tools]>=0.175.0,<1.0.0",
    "fastapi>=0.121.3",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
agentic_travel_planner = "agentic_travel_planner.main:run"
run_crew = "agentic_travel_planner.main:run"
train = "agentic_travel_planner.main:train"
replay = "agentic_travel_planner.main:replay"
test = "agentic_travel_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
